--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,8 @@ $nav-items-transition: left .15s ease-in-out !default;
 
 $mav-items-expanded-width: 200px !default;
 $nav-items-expanded-border: 0 !default;
+$nav-items-expanded-z-index: 50 !default;
+$nav-items-expanded-item-border: 0 !default;
 
 $nav-item-border: 0 !default;
 $nav-item-padding: 0 !default;
