--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -23,3 +23,12 @@ $silk-nav__items--expanded-width: 200px !default;
 $silk-nav__items--expanded-border: 0 !default;
 $silk-nav__items--expanded-z-index: 50 !default;
 $silk-nav__items--expanded-item-border: 0 !default;
+$silk-nav__items--expanded-background: none !default;
+
+$silk-nav__link--expanded-padding: $silk-nav__link-padding !default;
+$silk-nav__link--expanded-background: $silk-nav__link-background !default;
+$silk-nav__link--expanded-color: $silk-nav__link-color !default;
+$silk-nav__link--expanded-text-decoration: $silk-nav__link-text-decoration !default;
+$silk-nav__link--expanded-transition: $silk-nav__link-transition !default;
+$silk-nav__link--expanded--hover-color: $silk-nav__link--hover-color !default;
+$silk-nav__link--expanded--hover-background: $silk-nav__link--hover-background !default;
