Update link color

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,7 +12,7 @@ $silk-nav__item-padding: 0 !default;
 
 $silk-nav__link-display: block !default;
 $silk-nav__link-padding: 0 !default;
-$silk-nav__link-color: $link-color !default;
+$silk-nav__link-color: inherit !default;
 $silk-nav__link-background: none !default;
 $silk-nav__link-text-decoration: none !default;
 $silk-nav__link-transition: none !default;
