--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 /** options **/
-$silc-nav--expands: 800px !default;
+$silc-nav--options--expands: 800px !default;
 
 /** silc-nav__items **/
 $silc-nav__items-margin: 0 !default;
