Fix flash of un-styled nav. Development updates. See RELEASES.md

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -2,7 +2,12 @@
 @import "variables";
 
 .silc-nav {
-	overflow: hidden;
+  overflow: hidden;
+  opacity: 0;
+
+  &--ready {
+    opacity: 1;
+  }
 }
 
 .silc-nav__items {
