Fix issue with nav being invisible when JS is disabled

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -3,10 +3,13 @@
 
 .silc-nav {
   overflow: hidden;
-  opacity: 0;
 
-  &--ready {
-    opacity: 1;
+  .js & {
+    opacity: 0;
+
+    &--ready {
+      opacity: 1;
+    }
   }
 }
 
