--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,7 @@ $silc-nav__items-transition: left .15s ease-in-out !default;
 $silc-nav__item-border: 0 !default;
 $silc-nav__item-margin: 0 !default;
 $silc-nav__item-padding: 0 !default;
+$silc-nav__item-list-style: none !default;
 $silc-nav__item-background: none !default;
 $silc-nav__item-color: inherit !default;
 
