--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -39,6 +39,7 @@
   margin: $silc-nav__item-margin;
   padding: $silc-nav__item-padding;
   list-style: $silc-nav__item-list-style;
+  list-style-image: url(data:0); // Hack for IE
   background: $silc-nav__item-background;
   color: $silc-nav__item-color;
 }
